--- a/pom.xml
+++ b/pom.xml
@@ -60,12 +60,12 @@
         </dependency>
 
         <!-- CGLib for @Configuration -->
-        <dependency>
+        <!-- <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
             <version>${cglib.version}</version>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
 
 
         <!-- Servlet Spec -->
@@ -96,10 +96,16 @@
             <version>1.4</version>
         </dependency>
         
-        <dependency>
+      <!--   <dependency>
             <groupId>ojdbc</groupId>
             <artifactId>ojdbc</artifactId>
             <version>6</version>
+        </dependency> -->
+        
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
         </dependency>
         
         <dependency>
@@ -121,7 +127,12 @@
             <name>SpringSource Milestones Proxy</name>
             <url>https://oss.sonatype.org/content/repositories/springsource-milestones</url>
         </repository>
-    </repositories>
+	    <!-- In order to download the jar for ojdb6 -->
+	    <repository>
+	      <id>codelds</id>
+	      <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+	    </repository>
+  	</repositories>
 
     <build>
         <finalName>ESurveyPlanner</finalName>
