--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,5 +1,14 @@
+#global
+#jdbc.driverClassName=oracle.jdbc.OracleDriver
+#jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
+#jdbc.databaseurl=jdbc:oracle:thin:@slw103061:1521:span
+#jdbc.username=survey
+#jdbc.password=survey
+
+
+#Local
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
-jdbc.databaseurl=jdbc:oracle:thin:@slw103061:1521:span
+jdbc.databaseurl=jdbc:oracle:thin:@localhost:1521:xe
 jdbc.username=survey
 jdbc.password=survey
