--- a/src/main/webapp/META-INF/log4j.properties
+++ b/src/main/webapp/META-INF/log4j.properties
@@ -1,38 +1,45 @@
 # Define the root logger with appender file
-log4j.rootLogger = INFO, FILE
+log4j.rootLogger = INFO, DEBUG, stdout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+
+
+
+
 #log4j.category.com.esp = DEBUG, FILE
 
 # Define the file appender
-log4j.appender.FILE=org.apache.log4j.FileAppender
+#log4j.appender.FILE=org.apache.log4j.FileAppender
 
 # To send the logs over console
 #log4j.appender.FILE = org.apache.log4j.ConsoleAppender
 
 # Set the name of the file
-log4j.appender.FILE.File=${root-mia-istanza}/WEB-INF/logs/survey.log
+#log4j.appender.FILE.File=${root-mia-istanza}/WEB-INF/logs/survey.log
 #log4j.appender.FILE.File=application.log
 
 # Set the immediate flush to true (default)
-log4j.appender.FILE.ImmediateFlush=true
+#log4j.appender.FILE.ImmediateFlush=true
 
 # Set the threshold to debug mode
 #log4j.appender.FILE.Threshold=debug
 
 # Set the append to false, overwrite
-log4j.appender.FILE.Append=false
+#log4j.appender.FILE.Append=false
 
 # Define the layout for file appender
-log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+#log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 #log4j.appender.FILE.layout.conversionPattern=%r [%t]%-5p %c %x - %m%n
 
 #defining a date stamp and using in pattern
-datestamp=yyyy-MM-dd/HH:mm:ss.SSS/zzz
-log4j.appender.FILE.layout.conversionPattern=%d{${datestamp}} [%t]%-5p %c - %m%n
+#datestamp=yyyy-MM-dd/HH:mm:ss.SSS/zzz
+#log4j.appender.FILE.layout.conversionPattern=%d{${datestamp}} [%t]%-5p %c - %m%n
 
 
-roll.pattern.hourly=.yyyy-MM-dd.HH
-roll.pattern.daily=.yyyy-MM-dd
-roll.pattern.minute=.yyyy-MM-dd-HH-mm
+#roll.pattern.hourly=.yyyy-MM-dd.HH
+#roll.pattern.daily=.yyyy-MM-dd
+#roll.pattern.minute=.yyyy-MM-dd-HH-mm
 
 #log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.FILE.DatePattern=${roll.pattern.minute}
