--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <java.version>1.6</java.version>
         <spring.version>4.0.5.RELEASE</spring.version>      
         <cglib.version>2.2.2</cglib.version>
+        <spring.security.version>3.2.3.RELEASE</spring.security.version>
     </properties>
 
     <dependencies>
@@ -58,6 +59,23 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        
+        
+        <!-- spring security-->
+        
+      		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
+        
 
         <!-- CGLib for @Configuration -->
         <!-- <dependency>
@@ -96,7 +114,7 @@
             <version>1.4</version>
         </dependency>
         
-      <!--   <dependency>
+        <!--   <dependency>
             <groupId>ojdbc</groupId>
             <artifactId>ojdbc</artifactId>
             <version>6</version>
@@ -113,12 +131,17 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
             <version>3.18.1-GA</version> 
         </dependency>-->
-                
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>jsr250-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -127,12 +150,12 @@
             <name>SpringSource Milestones Proxy</name>
             <url>https://oss.sonatype.org/content/repositories/springsource-milestones</url>
         </repository>
-	    <!-- In order to download the jar for ojdb6 -->
-	    <repository>
-	      <id>codelds</id>
-	      <url>https://code.lds.org/nexus/content/groups/main-repo</url>
-	    </repository>
-  	</repositories>
+        <!-- In order to download the jar for ojdb6 -->
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
 
     <build>
         <finalName>ESurveyPlanner</finalName>
