All changes till may 2015

--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,7 +1,7 @@
 #global
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
-jdbc.databaseurl=jdbc:oracle:thin:@slw103061:1521:span
+jdbc.databaseurl=jdbc:oracle:thin:@10.91.6.207:1521:xe
 jdbc.username=survey
 jdbc.password=survey
 
@@ -10,5 +10,5 @@ jdbc.password=survey
 #jdbc.driverClassName=oracle.jdbc.OracleDriver
 #jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
 #jdbc.databaseurl=jdbc:oracle:thin:@localhost:1521:xe
-#jdbc.username=survey
-#jdbc.password=survey
+#jdbc.username=system
+#jdbc.password=oracle
