--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -102,4 +102,8 @@
         </description>
         <role-name>admin</role-name>
     </security-role>    -->
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/views/error.jsp</location>
+</error-page>
 </web-app>
