Commit all changes - Abhishek

--- a/src/main/webapp/WEB-INF/jdbc.properties
+++ b/src/main/webapp/WEB-INF/jdbc.properties
@@ -1,8 +1,8 @@
 #global
 jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.dialect=org.hibernate.dialect.Oracle10gDialect
-jdbc.databaseurl=jdbc:oracle:thin:@10.91.6.207:1521:xe
-jdbc.username=survey
+jdbc.databaseurl=jdbc:oracle:thin:@localhost:1521:xe
+jdbc.username=SURVEY
 jdbc.password=survey
 
 
