--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <java.version>1.6</java.version>
         <spring.version>4.0.5.RELEASE</spring.version>      
         <cglib.version>2.2.2</cglib.version>
+		<jetty.version>6.1.26</jetty.version>
         <spring.security.version>3.2.3.RELEASE</spring.security.version>
     </properties>
 
@@ -59,6 +60,11 @@
             <artifactId>spring-tx</artifactId>
             <version>${spring.version}</version>
         </dependency>
+         <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
         
         
         <!-- spring security-->
@@ -84,6 +90,21 @@
             <version>${cglib.version}</version>
             <scope>runtime</scope>
         </dependency> -->
+		
+		<!-- itext API dependency -->
+		<dependency>
+				<groupId>com.itextpdf</groupId>
+					<artifactId>itextpdf</artifactId>
+				<version>5.5.5</version>
+		</dependency>
+		
+		<!-- Excel Dependency Apache POI  -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.11</version>
+		</dependency>
+		
 
 
         <!-- Servlet Spec -->
@@ -113,6 +134,39 @@
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- file upload dependency -->
+        <dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<!--  mail api  -->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>mailapi</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>smtp</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+
+		
+		 <dependency>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		 
+		
+
         
         <!--   <dependency>
             <groupId>ojdbc</groupId>
@@ -136,6 +190,8 @@
             <artifactId>javassist</artifactId>
             <version>3.18.1-GA</version> 
         </dependency>-->
+       
+        
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>jsr250-api</artifactId>
@@ -163,12 +219,21 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0.2</version>
+                <version>3.2</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
-            </plugin> 		
+            </plugin>
+             <plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>${jetty.version}</version>
+				 <configuration>
+                    <scanIntervalSeconds>5</scanIntervalSeconds>
+                </configuration>
+            </plugin> 
+             		
         </plugins>		
 		
     </build>
